# MiradorClient

./: Mirador.sln  README.md
Mirador/: CMakeLists.txt  Client.cpp  Client.h  FileTransfer.cpp  FileTransfer.h  Hook.h  Keylogger.cpp  Keylogger.h  Mirador.vcxproj  Mirador.vcxproj.filters  NetworkHelper.h  RemoteDesktop.cpp  RemoteDesktop.h  RemoteShell.cpp  RemoteShell.h  Settings.cpp  Settings.h  common.h  main.cpp  obfuscate.h
Mirador/logs/: 04-06-2020.txt  05-06-2020.txt  18-06-2020.txt
PasswordExtractor/: CMakeLists.txt  PassCat.vcxproj
r77/: CMakeLists.txt  FileBothDirInformationEx.h  FileDirectoryInformationEx.h  FileFullDirInformationEx.h  FileIdBothDirInformationEx.h  FileIdFullDirInformationEx.h  FileInformationClassEx.h  FileNamesInformationEx.h  Rootkit.cpp  SystemProcessInformationEx.h  r77.h  r77.vcxproj  r77.vcxproj.filters
